# tauri-nuxt3-earthquakes

./: README.md  app.vue  nuxt.config.ts  package.json  types.ts  uno.config.ts
.github/workflows/: release.yml
components/: ListAfad.vue  ListKandilli.vue  Loading.vue  QuakeItem.vue
components/icons/: PowerIcon.vue
composables/: useNotify.ts  useQuakes.ts
pages/: index.vue  kandilli.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  quakes.rs
