[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["macos-private-api", "notification-all", "system-tray", "window-start-dragging"] }
window-vibrancy = "0.3.2"
reqwest = {version = "0.11.14", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.14.0"
ureq = { version = "2.6.2", features = ["charset", "json"] }
objc = "0.2.7"
chrono = "0.4.23"
tauri-plugin-positioner = {version = "1.0.4", features = ["system-tray"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
